# big_space

./: Cargo.toml
examples/: debug.rs  demo.rs  error.rs  xpbd.rs
src/: bevy_xpbd.rs  camera.rs  debug.rs  grid_cell.rs  lib.rs  plugin.rs  precision.rs
src/bevy_xpbd/: floating_origin_sync.rs
src/grid/: propagation.rs
