[package]
name = "big_space"
version = "0.4.0"
edition = "2021"
description = "A floating origin plugin for bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "floating-origin", "large-scale", "space"]
repository = "https://github.com/aevyrie/big_space"
documentation = "https://docs.rs/crate/big_space/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default_features = false }

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "default_font",
    "bevy_ui",
    "bevy_pbr",
    "x11",
    "tonemapping_luts",
] }
blake3 = { version = "1.5", features = ["pure"] }

[features]
default = ["debug", "camera", "bevy_render"]
debug = ["bevy/bevy_gizmos"]
bevy_render = ["bevy/bevy_render"]
camera = ["bevy_render"]
